Revised INI parser.
Renamed normpath to cleanpath, since it also sanitizes paths (in
addition to normalizing them). The INI parser now handles a wider
variety of use cases, but it still needs more work. Preloading has been
temporarily removed for the refactoring process.

--- a/tests/ini/errors.ini
+++ b/tests/ini/errors.ini
@@ -1,24 +1,10 @@
 # Error testing: this file contains some invalid components that iniparse
 # should be rejecting.
 
-# No .. segments in section names
-[foo/../bar]
-message = This should not be written
-
-[../foo]
-message = Same thing: should not be written
-
-[foo/..]
-message = Also bad
-
-[valid]
-a valid key = ok
-an invalid / key = no slashes allowed
-/ also invalid = bad
-also also invalid / = also bad
 
 ; Let's throw up a few syntax errors for fun
 ---
 invalid
 [
 ]
+   = nope
