--- a/tests/ini/features.ini
+++ b/tests/ini/features.ini
@@ -20,3 +20,43 @@ back to unsectioned = this is a feature, not a bug
 
 [this/./is/./ok]
 hi = there
+
+[]
+; Sections can be made "on the fly" with slashes in keys, but any variables
+; that aren't top-level (globals) need to be fully qualified.
+section/key = value
+section/keycopy = ${section/key}
+
+; INI permits a key and a section to have the same name!
+conflict = this is the conflicting key
+
+[conflict]
+message = this is the conflicting section
+
+; Test handling of .. in names
+[foo/../bar]
+message = This should be in bar
+. = This should be substituted with _
+.. = This should be substituted with __
+     Oh, and it can be multiline too
+
+; Testing parameterized section names
+[part /dev/sda1]
+message = This should be in part_/dev/sda1/message
+
+
+; Should strip the leading ..
+[../blah]
+hello = world
+
+
+; Should be top-level in the output
+[blah/..]
+unsectioned blah = it worked
+
+
+[]
+; Fun with keys
+/ slash key = top level
+middle / key = _key in middle_
+end key / = also top level
