Replaced variable substitution code in INI parser.
Instead of blindly performing a gsub using everything in the symbol
table, a new recursive substitution function has been added. Among other
things, variable indirection is now supported (though its utility in an
INI file is questionable).

Also added a method for disabling variable substitution (key
interpolation) completely. Added a small helper to deal with
parameterized section names.

--- a/tests/ini/features.ini
+++ b/tests/ini/features.ini
@@ -25,7 +25,7 @@ hi = there
 ; Sections can be made "on the fly" with slashes in keys, but any variables
 ; that aren't top-level (globals) need to be fully qualified.
 section/key = value
-section/keycopy = ${section/key}
+section/keycopy = ${key}
 
 ; INI permits a key and a section to have the same name!
 conflict = this is the conflicting key
