Added support for alternate delimiter and comment characters.
The characters used as delimiters for key and value separation now can
be customized, with the = and : symbols used by default. Comment
characters (defaulting to # and ;) can also be customized. Updated the
usage information, which is now becoming long and probably needs to be
split up a bit.

--- a/tests/ini/features.ini
+++ b/tests/ini/features.ini
@@ -39,6 +39,7 @@ message = This should be in bar
 . = This should be substituted with _
 .. = This should be substituted with __
      Oh, and it can be multiline too
+     And = it can have embedded equals
 
 ; Testing parameterized section names
 [part /dev/sda1]
@@ -60,3 +61,5 @@ unsectioned blah = it worked
 / slash key = top level
 middle / key = _key in middle_
 end key / = also top level
+
+empty =
