Completed INI parser.
After much consideration, I decided to change the section/key conflict
resolution code to prefix section names with s_ and key names with k_.
This way, no mangling has to be done inside the internal symbol table,
so references to keys named "." and ".." will work properly during
variable interpolation.

Also added several other capabilities, including support for environment
variables and index file output. Now that environment variables can be
read directly, there is little need for preloading, so that capability
has been removed. Client code that wants to preload should simply create
an INI file and pass it as the first file to be parsed.

--- a/tests/ini/features.ini
+++ b/tests/ini/features.ini
@@ -8,24 +8,19 @@ bar = baz
 ; The following value should be "baz"
 silly = ${bar}
 
-[foo/subfoo]
+[bar]
 hello = world
 # Should also be "baz":
-is baz = ${foo/bar}
+is baz = ${foo:bar}
 also is baz = ${is baz}
 
 []
 
 back to unsectioned = this is a feature, not a bug
+empty =
 
-[this/./is/./ok]
-hi = there
-
-[]
-; Sections can be made "on the fly" with slashes in keys, but any variables
-; that aren't top-level (globals) need to be fully qualified.
-section/key = value
-section/keycopy = ${key}
+; We can reference environment variables like this:
+home = ${[HOME]}
 
 ; INI permits a key and a section to have the same name!
 conflict = this is the conflicting key
@@ -33,33 +28,12 @@ conflict = this is the conflicting key
 [conflict]
 message = this is the conflicting section
 
-; Test handling of .. in names
-[foo/../bar]
-message = This should be in bar
-. = This should be substituted with _
-.. = This should be substituted with __
+[dots]
+. = This should be s_dots/k_.
+.. = This should be s_dots/k_..
      Oh, and it can be multiline too
      And = it can have embedded equals
 
 ; Testing parameterized section names
 [part /dev/sda1]
-message = This should be in part_/dev/sda1/message
-
-
-; Should strip the leading ..
-[../blah]
-hello = world
-
-
-; Should be top-level in the output
-[blah/..]
-unsectioned blah = it worked
-
-
-[]
-; Fun with keys
-/ slash key = top level
-middle / key = _key in middle_
-end key / = also top level
-
-empty =
+message = hello
